--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="header-container">
         <div class="logo-container">
           <!-- IMG -->
-          <a href="/"><img src="./assets/logo/full-logo-white.svg" alt=""></a>
+          <a href="/"><img src="./assets/logo/full-logo-white.svg" alt="logo"></a>
         </div>
         <nav class="header__menu">
           <ul class="header__list">
@@ -42,13 +42,13 @@
         <p class="info-text">Посети мастер-класс в интереснейшем месте Москвы
           и стань профессиональным музыкантом</p>
       </div>
-      
+
       <div class="section-1__content__button-container">
         <ul class="icon-container">
           <li><a class="whatsapp" href="https://api.whatsapp.com/send/?phone=74997558600"></a></li>
           <li><a class="telegram" href="https://t.me/https://t.me/+74997558600"></a></li>
         </ul>
-        <div class="try-lesson"><a href="/#take-a-lesson">Пробное занятие<a></div>
+        <div class="try-lesson"><a href="/#take-a-lesson">Пробное занятие</a></div>
       </div>
     </div>
   </section>
@@ -119,7 +119,7 @@
     <div class="text-top">
       <h1 class="white">КТО МЫ?</h1>
       <div class="section-3__text-container-top">
-        <div class="black-star"><img src="./assets/black-star.png" alt=""></div>
+        <div class="black-star"><img src="./assets/black-star.png" alt="black-star"></div>
         <p class="heading-p">
           Продюсерский центр Игоря Сандлера –
           <br>
@@ -182,7 +182,7 @@
 
         <div class="swiper-slide">
           <div class="img-wrapper">
-            <img src="./assets/fedorova.png" />
+            <img src="./assets/fedorova.png" alt="fedorova">
           </div>
           <p>Лилия Федорова</p>
           <div class="lesson-type vocal">
@@ -191,7 +191,7 @@
 
         <div class="swiper-slide">
           <div class="img-wrapper">
-            <img src="./assets/neto.png" />
+            <img src="./assets/neto.png" alt="neto">
           </div>
           <p>Антонио Нето</p>
           <div class="lesson-type drums">
@@ -200,7 +200,7 @@
 
         <div class="swiper-slide">
           <div class="img-wrapper">
-            <img src="./assets/shutova.png" />
+            <img src="./assets/shutova.png" alt="shutova">
           </div>
           <p>Ольга Шутова</p>
           <div class="lesson-type vocal">
@@ -210,7 +210,7 @@
 
         <div class="swiper-slide">
           <div class="img-wrapper">
-            <img src="./assets/tip.png" />
+            <img src="./assets/tip.png" alt="tip">
           </div>
           <p>Лилия Федорова</p>
           <div class="lesson-type guitar">
@@ -249,7 +249,7 @@
     </div>
     <div class="button-container">
       <div class="see-more">Смотреть еще</div>
-      <div class="try-red"><a href="/#take-a-lesson">Пробное занятие<a></div>
+      <div class="try-red"><a href="/#take-a-lesson">Пробное занятие</a></div>
     </div>
   </section>
   <section class="students-pics">
@@ -263,130 +263,129 @@
       <div class="swiper-pagination"></div>
     </div>
   </section>
-    <section class="section-6"></section>
-    <section class="section-7">
-      <h1>Уникальный
+  <section class="section-7">
+    <h1>Уникальный
+      <br>
+      молодежный проект
+    </h1>
+    <div class="section-7__text-container-top">
+      <p>Программа обучения построена на сочетании
         <br>
-        молодежный проект
-      </h1>
-      <div class="section-7__text-container-top">
-        <p>Программа обучения построена на сочетании
-          <br>
-          индивидуальных занятий профильных
-          <br>
-          предметов музыкантов (вокала, гитары,
-          <br>
-          бас-гитары, клавишных, ударных), обязательных
-          <br>
-          для посещения, а также факультативных
-          <br>
-          занятий по слушанию музыки и обсуждению
-          <br>
-          стилей, жанров и направлений.
-          <br>
-          <br>
-          Во время прохождения обучения ежемесячно
-          <br>
-          проводятся мастер-классы с известными
-          <br>
-          российскими музыкантами и онлайн-занятия
-          <br>
-          с мировыми преподавателями по вокалу.
-        </p>
+        индивидуальных занятий профильных
+        <br>
+        предметов музыкантов (вокала, гитары,
+        <br>
+        бас-гитары, клавишных, ударных), обязательных
+        <br>
+        для посещения, а также факультативных
+        <br>
+        занятий по слушанию музыки и обсуждению
+        <br>
+        стилей, жанров и направлений.
+        <br>
+        <br>
+        Во время прохождения обучения ежемесячно
+        <br>
+        проводятся мастер-классы с известными
+        <br>
+        российскими музыкантами и онлайн-занятия
+        <br>
+        с мировыми преподавателями по вокалу.
+      </p>
 
-      </div>
-      <div class="section-7__text-container-middle">
-        <p>Для выступления ансамблем юные музыканты
-          <br>
-          приобретают необходимые навыки сыгранности,
-          <br>
-          импровизации, смогут потренироваться создавать
-          <br>
-          собственные музыкаль ные произведения
-          <br>
-          и оформлять права на них. У нас постоянно проходят
-          <br>
-          учебные концерты на площадке Продюсерского
-          <br>
-          центра Игоря Сандлера, а также выступления
-          <br>
-          на других известных клубных площадках.
-          <br>
-          <br>
-          Наши группы выступают на самых крупных
-          <br>
-          музыкальных фестивалях г. Москвы на одной сцене
-          <br>
-          с мировыми звездами.
-        </p>
-      </div>
-      <div class="section-7__text-container-bottom">
-        <p>Наши учащиеся знакомятся с основами продвижения музыкальных групп, узнают как правильно создать свой имидж,
-          получить необходимую информационную поддержку и самопродюсировать себя, чтобы начать самостоятельное
-          продвижение.
-        </p>
-      </div>
-      <div class="section-7__button-container">
-        <div class="try-white"><a href="/#take-a-lesson">Пробное занятие</a></div>
-      </div>
-    </section>
-    <section class="section-8">
-      <h1>Контакты</h1>
-      <p class="mina">Мы всегда на связи!</p>
-      <div class="sandler-container">
-        <img src="./assets/logo/full-logo-red.svg" alt="">
-      </div>
+    </div>
+    <div class="section-7__text-container-middle">
+      <p>Для выступления ансамблем юные музыканты
+        <br>
+        приобретают необходимые навыки сыгранности,
+        <br>
+        импровизации, смогут потренироваться создавать
+        <br>
+        собственные музыкаль ные произведения
+        <br>
+        и оформлять права на них. У нас постоянно проходят
+        <br>
+        учебные концерты на площадке Продюсерского
+        <br>
+        центра Игоря Сандлера, а также выступления
+        <br>
+        на других известных клубных площадках.
+        <br>
+        <br>
+        Наши группы выступают на самых крупных
+        <br>
+        музыкальных фестивалях г. Москвы на одной сцене
+        <br>
+        с мировыми звездами.
+      </p>
+    </div>
+    <div class="section-7__text-container-bottom">
+      <p>Наши учащиеся знакомятся с основами продвижения музыкальных групп, узнают как правильно создать свой имидж,
+        получить необходимую информационную поддержку и самопродюсировать себя, чтобы начать самостоятельное
+        продвижение.
+      </p>
+    </div>
+    <div class="section-7__button-container">
+      <div class="try-white"><a href="/#take-a-lesson">Пробное занятие</a></div>
+    </div>
+  </section>
+  <section class="section-8">
+    <h1>Контакты</h1>
+    <p class="mina">Мы всегда на связи!</p>
+    <div class="sandler-container">
+      <img src="./assets/logo/full-logo-red.svg" alt="">
+    </div>
 
-      <p>Режим работы:</p>
-      <p class="mina">Ежедневно с 10:00 до 22:00</p>
-      <div class="section-8__number"><a href="tel:+74997558600">8 (499) 755 86 00</a></div>
-      <address>г. Москва, Потаповский пер. 3с1</address>
-      <ul class="icon-container">
-        <li><a class="tiktok" href=""></a></li>
-        <li><a class="whatsapp" href="https://api.whatsapp.com/send/?phone=74997558600"></a></li>
-        <li><a class="telegram" href="https://t.me/+74997558600"></a></li>
-      </ul>
-      <button class="callback callback-contacts"><a href="/#take-a-lesson">Обратный звонок</a></button>
-    </section>
-    <footer class="footer">
-      <div class="footer__top-line">
-        <img src="./assets/logo/full-logo-white.svg" alt="">
+    <p>Режим работы:</p>
+    <p class="mina">Ежедневно с 10:00 до 22:00</p>
+    <div class="section-8__number"><a href="tel:+74997558600">8 (499) 755 86 00</a></div>
+    <address>г. Москва, Потаповский пер. 3с1</address>
+    <ul class="icon-container">
+      <li><a class="tiktok" href=""></a></li>
+      <li><a class="whatsapp" href="https://api.whatsapp.com/send/?phone=74997558600"></a></li>
+      <li><a class="telegram" href="https://t.me/+74997558600"></a></li>
+    </ul>
+    <button class="callback callback-contacts"><a href="/#take-a-lesson">Обратный звонок</a></button>
+  </section>
+  <footer class="footer">
+    <div class="footer__top-line">
+      <img src="./assets/logo/full-logo-white.svg" alt="">
 
-        <nav class="footer__menu">
-          <ul class="footer__list">
-            <li class="footer__item"><a href="">О нас</a></li>
-            <li class="footer__item"><a href="">Курсы</a></li>
-            <li class="footer__item"><a href="">Цены</a></li>
-            <li class="footer__item"><a href="">FAQ</a></li>
-            <li class="footer__item"><a href="">Контакты</a></li>
-          </ul>
-        </nav>
-        <div class="footer__icons-container">
-          <ul class="icon-container">
-            <li><a class="tiktok" href=""></a></li>
-            <li><a class="whatsapp" href="https://api.whatsapp.com/send/?phone=74997558600"></a></li>
-            <li><a class="telegram" href="https://t.me/+74997558600"></a></li>
-          </ul>
-          <button class="callback callback-footer"><a href="/#take-a-lesson">Обратный звонок</a></button>
-        </div>
+      <nav class="footer__menu">
+        <ul class="footer__list">
+          <li class="footer__item"><a href="">О нас</a></li>
+          <li class="footer__item"><a href="">Курсы</a></li>
+          <li class="footer__item"><a href="">Цены</a></li>
+          <li class="footer__item"><a href="">FAQ</a></li>
+          <li class="footer__item"><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <div class="footer__icons-container">
+        <ul class="icon-container">
+          <li><a class="tiktok" href=""></a></li>
+          <li><a class="whatsapp" href="https://api.whatsapp.com/send/?phone=74997558600"></a></li>
+          <li><a class="telegram" href="https://t.me/+74997558600"></a></li>
+        </ul>
+        <button class="callback callback-footer"><a href="/#take-a-lesson">Обратный звонок</a></button>
       </div>
-      <div class="footer__bottom-line">
-        <p>Фонд поддержки одаренных детей и молодежи Игоря Сандлера
-          <br>
-          ИНН 7719290541; КПП771901001; ОГРН 1137799010030
-          <br>
-          Юридический адрес: 105203, г. Москва, ул. Первомайская,
-          <br>
-          д. 109/2, кв. 17
-        </p>
-        <div class="footer__contacts-container">
-          <div class="footer__number"><a href="tel:+74997558600">8 (499) 755 86 00</a></div>
-          <address>г. Москва, Потаповский пер. 3с1</address>
-        </div>
+    </div>
+    <div class="footer__bottom-line">
+      <p>Фонд поддержки одаренных детей и молодежи Игоря Сандлера
+        <br>
+        ИНН 7719290541; КПП771901001; ОГРН 1137799010030
+        <br>
+        Юридический адрес: 105203, г. Москва, ул. Первомайская,
+        <br>
+        д. 109/2, кв. 17
+      </p>
+      <div class="footer__contacts-container">
+        <div class="footer__number"><a href="tel:+74997558600">8 (499) 755 86 00</a></div>
+        <address>г. Москва, Потаповский пер. 3с1</address>
       </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script src="./index.js"></script>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+  <script src="./index.js"></script>
 </body>
 
 </html>
