--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <title>Sandler Rock School</title>
 </head>
 
@@ -45,8 +46,8 @@
 
       <div class="section-1__content__button-container">
         <ul class="icon-container">
-          <li><a class="whatsapp" href="https://api.whatsapp.com/send/?phone=74997558600"></a></li>
-          <li><a class="telegram" href="https://t.me/https://t.me/+74997558600"></a></li>
+          <li><a class="whatsapp" href="https://wa.me/79258004683"></a></li>
+          <li><a class="telegram" href="https://t.me/sandlerrockschool"></a></li>
         </ul>
         <div class="try-lesson"><a href="/#take-a-lesson">Пробное занятие</a></div>
       </div>
@@ -210,16 +211,16 @@
 
         <div class="swiper-slide">
           <div class="img-wrapper">
-            <img src="./assets/tip.png" alt="tip">
+            <img src="./assets/halembakov.png" alt="halembakov">
           </div>
-          <p>Лилия Федорова</p>
+          <p>Валентин Халембаков</p>
           <div class="lesson-type guitar">
           </div>
         </div>
 
       </div>
-      <!-- <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div> -->
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
       <div class="swiper-pagination"></div>
     </div>
     <div class="reviews__button-container">
@@ -342,8 +343,8 @@
     <address>г. Москва, Потаповский пер. 3с1</address>
     <ul class="icon-container">
       <li><a class="tiktok" href=""></a></li>
-      <li><a class="whatsapp" href="https://api.whatsapp.com/send/?phone=74997558600"></a></li>
-      <li><a class="telegram" href="https://t.me/+74997558600"></a></li>
+      <li><a class="whatsapp" href="https://wa.me/79258004683"></a></li>
+      <li><a class="telegram" href="https://t.me/sandlerrockschool"></a></li>
     </ul>
     <button class="callback callback-contacts"><a href="/#take-a-lesson">Обратный звонок</a></button>
   </section>
@@ -363,8 +364,8 @@
       <div class="footer__icons-container">
         <ul class="icon-container">
           <li><a class="tiktok" href=""></a></li>
-          <li><a class="whatsapp" href="https://api.whatsapp.com/send/?phone=74997558600"></a></li>
-          <li><a class="telegram" href="https://t.me/+74997558600"></a></li>
+          <li><a class="whatsapp" href="https://wa.me/79258004683"></a></li>
+          <li><a class="telegram" href="https://t.me/sandlerrockschool"></a></li>
         </ul>
         <button class="callback callback-footer"><a href="/#take-a-lesson">Обратный звонок</a></button>
       </div>
@@ -384,7 +385,7 @@
       </div>
     </div>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
   <script src="./index.js"></script>
 </body>
 
