changed element via display: grid, added target blank on links

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
   <section class="section-1">
     <header class="header">
       <div class="header-container">
-        <div class="logo-container">
+
+        <div class="header__logo-container">
           <!-- IMG -->
           <a href="/"><img src="./assets/logo/full-logo-white.svg" alt="logo"></a>
         </div>
+
         <nav class="header__menu">
           <ul class="header__list">
             <li class="header__item"><a href="">О нас</a></li>
@@ -28,13 +30,15 @@
             <li class="header__item"><a href="">Контакты</a></li>
           </ul>
         </nav>
+
         <div class="contacts-container">
-          <div class="black-button font-1vw"><a href="/#take-a-lesson">Обратный звонок</a></div>
-          <div class="contacts">
+          <div class="black-button"><a href="/#take-a-lesson">Обратный звонок</a></div>
+          <div class="header__contacts">
             <div class="number"><a href="tel:+74997558600">8 (499) 755 86 00</a></div>
             <address>г. Москва, Потаповский пер. 3с1</address>
           </div>
         </div>
+        
       </div>
     </header>
     <div class="section-1__content">
@@ -46,8 +50,8 @@
 
       <div class="section-1__content__button-container">
         <ul class="icon-container">
-          <li><a class="whatsapp" href="https://wa.me/79258004683"></a></li>
-          <li><a class="telegram" href="https://t.me/sandlerrockschool"></a></li>
+          <li><a class="whatsapp" href="https://wa.me/79258004683" target="_blank"></a></li>
+          <li><a class="telegram" href="https://t.me/sandlerrockschool" target="_blank"></a></li>
         </ul>
         <div class="red-button"><a href="/#take-a-lesson">Пробное занятие</a></div>
       </div>
@@ -81,7 +85,7 @@
                 <div class="more">Подробнее</div>
               </div>
             </div>
-  
+
             <div class="card" data-instrument="guitar">
               <div class="card__img-container">
                 <img src="./assets/electric-guitar.png" alt="">
@@ -91,7 +95,7 @@
                 <div class="more">Подробнее</div>
               </div>
             </div>
-  
+
             <div class="card" data-instrument="guitar">
               <div class="card__img-container">
                 <img src="./assets/bass-guitar.png" alt="">
@@ -101,7 +105,7 @@
                 <div class="more">Подробнее</div>
               </div>
             </div>
-  
+
             <div class="card" data-instrument="vocal">
               <div class="card__img-container">
                 <img src="./assets/pop-vocal.png" alt="">
@@ -111,7 +115,7 @@
                 <div class="more">Подробнее</div>
               </div>
             </div>
-  
+
             <div class="card" data-instrument="vocal">
               <div class="card__img-container">
                 <img src="./assets/folk-vocal.png" alt="">
@@ -123,7 +127,7 @@
                 </div>
               </div>
             </div>
-  
+
             <div class="card" data-instrument="vocal">
               <div class="card__img-container">
                 <img src="./assets/rock-vocal.png" alt="">
@@ -133,7 +137,7 @@
                 <div class="more">Подробнее</div>
               </div>
             </div>
-  
+
             <div class="card" data-instrument="vocal">
               <div class="card__img-container">
                 <img src="./assets/academic-vocal.png" alt="">
@@ -143,7 +147,7 @@
                 <div class="more">Подробнее</div>
               </div>
             </div>
-  
+
             <div class="card" data-instrument="drums">
               <div class="card__img-container">
                 <img src="./assets/drums.png" alt="">
@@ -153,7 +157,7 @@
                 <div class="more">Подробнее</div>
               </div>
             </div>
-  
+
             <div class="card" data-instrument="keys">
               <div class="card__img-container">
                 <img src="./assets/keys.png" alt="">
@@ -163,7 +167,7 @@
                 <div class="more">Подробнее</div>
               </div>
             </div>
-  
+
           </div>
         </div>
         <div class="buttons-container">
@@ -214,76 +218,76 @@
           относился к себе
         </h1>
       </div>
-    </section>
-  
-    <section class="section-4">
-      <form action="">
-        <fieldset id="take-a-lesson">
-          <h1 class="heading">НАЧНИТЕ ОБУЧЕНИЕ
-            С ПРОБНОГО УРОКА</h1>
-          <select name="">
-            <option value="" disabled>Формат обучения</option>
-          </select>
-          <input type="text" placeholder="Имя">
-          <input type="tel" placeholder="Телефон">
-          <input class="request" type="submit" value="Оставить заявку">
-        </fieldset>
-      </form>
-    </section>
-    <section class="our-teachers">
-      <h1>Педагоги</h1>
-      <p>Наши педагоги настоящие мастера своего дела
-        <br>
-        с многолетним опытом работы на сцене и преподавания
-      </p>
-      <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-  
-          <div class="swiper-slide">
-            <div class="img-wrapper">
-              <img src="./assets/fedorova.png" alt="fedorova">
-            </div>
-            <p>Лилия Федорова</p>
-            <div class="lesson-type vocal">
-            </div>
+  </section>
+
+  <section class="section-4">
+    <form action="">
+      <fieldset id="take-a-lesson">
+        <h1 class="heading">НАЧНИТЕ ОБУЧЕНИЕ
+          С ПРОБНОГО УРОКА</h1>
+        <select name="">
+          <option value="" disabled>Формат обучения</option>
+        </select>
+        <input type="text" placeholder="Имя">
+        <input type="tel" placeholder="Телефон">
+        <input class="request" type="submit" value="Оставить заявку">
+      </fieldset>
+    </form>
+  </section>
+  <section class="our-teachers">
+    <h1>Педагоги</h1>
+    <p>Наши педагоги настоящие мастера своего дела
+      <br>
+      с многолетним опытом работы на сцене и преподавания
+    </p>
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+
+        <div class="swiper-slide">
+          <div class="img-wrapper">
+            <img src="./assets/fedorova.png" alt="fedorova">
           </div>
-  
-          <div class="swiper-slide">
-            <div class="img-wrapper">
-              <img src="./assets/neto.png" alt="neto">
-            </div>
-            <p>Антонио Нето</p>
-            <div class="lesson-type drums">
-            </div>
+          <p>Лилия Федорова</p>
+          <div class="lesson-type vocal">
           </div>
-  
-          <div class="swiper-slide">
-            <div class="img-wrapper">
-              <img src="./assets/shutova.png" alt="shutova">
-            </div>
-            <p>Ольга Шутова</p>
-            <div class="lesson-type vocal">
-            </div>
-          </div>
-  
-  
-          <div class="swiper-slide">
-            <div class="img-wrapper">
-              <img src="./assets/halembakov.png" alt="halembakov">
-            </div>
-            <p>Валентин Халембаков</p>
-            <div class="lesson-type guitar">
-            </div>
-          </div>
-  
         </div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-pagination"></div>
+
+        <div class="swiper-slide">
+          <div class="img-wrapper">
+            <img src="./assets/neto.png" alt="neto">
+          </div>
+          <p>Антонио Нето</p>
+          <div class="lesson-type drums">
+          </div>
+        </div>
+
+        <div class="swiper-slide">
+          <div class="img-wrapper">
+            <img src="./assets/shutova.png" alt="shutova">
+          </div>
+          <p>Ольга Шутова</p>
+          <div class="lesson-type vocal">
+          </div>
+        </div>
+
+
+        <div class="swiper-slide">
+          <div class="img-wrapper">
+            <img src="./assets/halembakov.png" alt="halembakov">
+          </div>
+          <p>Валентин Халембаков</p>
+          <div class="lesson-type guitar">
+          </div>
+        </div>
+
       </div>
-      <div class="reviews__button-container">
-        <button class="red-button"><a href="/#take-a-lesson">Записаться</a></button>
-      </div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-pagination"></div>
+    </div>
+    <div class="reviews__button-container">
+      <button class="red-button"><a href="/#take-a-lesson">Записаться</a></button>
+    </div>
     </div>
   </section>
   <section class="section-5">
@@ -405,8 +409,8 @@
       <address>г. Москва, Потаповский пер. 3с1</address>
       <ul class="icon-container">
         <!-- <li><a class="tiktok" href=""></a></li> -->
-        <li><a class="whatsapp" href="https://wa.me/79258004683"></a></li>
-        <li><a class="telegram" href="https://t.me/sandlerrockschool"></a></li>
+        <li><a class="whatsapp" href="https://wa.me/79258004683" target="_blank"></a></li>
+        <li><a class="telegram" href="https://t.me/sandlerrockschool" target="_blank"></a></li>
       </ul>
       <button class="black-button"><a href="/#take-a-lesson">Обратный звонок</a></button>
     </div>
@@ -421,39 +425,44 @@
         width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
   </section>
   <footer class="footer">
-    <div class="footer__top-line">
-      <a href="/"><img src="./assets/logo/full-logo-white.svg" alt=""></a>
+    <div class="wrapper">
+      <div class="footer-container">
 
-      <nav class="footer__menu">
-        <ul class="footer__list">
-          <li class="footer__item"><a href="">О нас</a></li>
-          <li class="footer__item"><a href="">Курсы</a></li>
-          <li class="footer__item"><a href="">Цены</a></li>
-          <li class="footer__item"><a href="">FAQ</a></li>
-          <li class="footer__item"><a href="">Контакты</a></li>
-        </ul>
-      </nav>
-      <div class="footer__icons-container">
-        <ul class="icon-container">
-          <!-- <li><a class="tiktok" href=""></a></li> -->
-          <li><a class="whatsapp" href="https://wa.me/79258004683"></a></li>
-          <li><a class="telegram" href="https://t.me/sandlerrockschool"></a></li>
-        </ul>
-        <button class="black-button"><a href="/#take-a-lesson">Обратный звонок</a></button>
-      </div>
-    </div>
-    <div class="footer__bottom-line">
-      <p>Фонд поддержки одаренных детей и молодежи Игоря Сандлера
-        <br>
-        ИНН 7719290541; КПП771901001; ОГРН 1137799010030
-        <br>
-        Юридический адрес: 105203, г. Москва, ул. Первомайская,
-        <br>
-        д. 109/2, кв. 17
-      </p>
-      <div class="footer__contacts-container">
-        <div class="footer__number"><a href="tel:+74997558600">8 (499) 755 86 00</a></div>
-        <address>г. Москва, Потаповский пер. 3с1</address>
+        <div class="logo-container">
+          <a href="/"><img src="./assets/logo/full-logo-white.svg" alt=""></a>
+        </div>
+  
+        <nav class="footer__menu">
+          <ul class="footer__list">
+            <li class="footer__item"><a href="">О нас</a></li>
+            <li class="footer__item"><a href="">Курсы</a></li>
+            <li class="footer__item"><a href="">Цены</a></li>
+            <li class="footer__item"><a href="">FAQ</a></li>
+            <li class="footer__item"><a href="">Контакты</a></li>
+          </ul>
+        </nav>
+  
+        <div class="footer__icons-container">
+          <ul class="icon-container">
+            <li><a class="whatsapp white-border" href="https://wa.me/79258004683" target="_blank"></a></li>
+            <li><a class="telegram white-border" href="https://t.me/sandlerrockschool" target="_blank"></a></li>
+          </ul>
+          <div class="black-button"><a href="/#take-a-lesson">Обратный звонок</a></div>
+        </div>
+  
+        <p>Фонд поддержки одаренных детей и молодежи Игоря Сандлера
+          <br>
+          ИНН 7719290541; КПП771901001; ОГРН 1137799010030
+          <br>
+          Юридический адрес: 105203, г. Москва, ул. Первомайская,
+          <br>
+          д. 109/2, кв. 17
+        </p>
+  
+        <div class="footer__contacts">
+          <div class="number"><a href="tel:+74997558600">8 (499) 755 86 00</a></div>
+          <address>г. Москва, Потаповский пер. 3с1</address>
+        </div>
       </div>
     </div>
   </footer>
