--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </div>
               <div class="card-container">
                 <h2>Акустическая гитара</h2>
-                <div class="more">Подробнее</div>
+                <div class="more red-button"><a href="">Подробнее</a></div>
               </div>
             </div>
 
@@ -92,7 +92,7 @@
               </div>
               <div class="card-container">
                 <h2>Электрогитара</h2>
-                <div class="more">Подробнее</div>
+                <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
 
@@ -102,7 +102,7 @@
               </div>
               <div class="card-container">
                 <h2>Бас гитара</h2>
-                <div class="more">Подробнее</div>
+                <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
 
@@ -112,7 +112,7 @@
               </div>
               <div class="card-container">
                 <h2>Эстрадный вокал</h2>
-                <div class="more">Подробнее</div>
+                <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
 
@@ -123,7 +123,7 @@
               <div class="card-container">
                 <h2>Народный вокал</h2>
                 <div class="button-container">
-                  <div class="more">Подробнее</div>
+                  <div class="more"><a href="">Подробнее</a></div>
                 </div>
               </div>
             </div>
@@ -134,7 +134,7 @@
               </div>
               <div class="card-container">
                 <h2>Рок вокал</h2>
-                <div class="more">Подробнее</div>
+                <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
 
@@ -144,7 +144,7 @@
               </div>
               <div class="card-container">
                 <h2>Академический вокал</h2>
-                <div class="more">Подробнее</div>
+                <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
 
@@ -154,7 +154,7 @@
               </div>
               <div class="card-container">
                 <h2>Ударные</h2>
-                <div class="more">Подробнее</div>
+                <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
 
@@ -164,7 +164,7 @@
               </div>
               <div class="card-container">
                 <h2>Клавишные</h2>
-                <div class="more">Подробнее</div>
+                <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
 
