--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <address>г. Москва, Потаповский пер. 3с1</address>
           </div>
         </div>
-        
+
       </div>
     </header>
     <div class="section-1__content">
@@ -50,8 +50,16 @@
 
       <div class="section-1__content__button-container">
         <ul class="icon-container">
-          <li><a class="whatsapp" href="https://wa.me/79258004683" target="_blank"></a></li>
-          <li><a class="telegram" href="https://t.me/sandlerrockschool" target="_blank"></a></li>
+          <li>
+            <a class="whatsapp" href="https://wa.me/79258004683" target="_blank">
+              <img src="./assets/icons/whatsapp.png" alt="">
+            </a>
+          </li>
+          <li>
+            <a class="telegram" href="https://t.me/sandlerrockschool" target="_blank">
+              <img src="../assets/icons/telegram.png" alt="">
+            </a>
+          </li>
         </ul>
         <div class="red-button"><a href="/#take-a-lesson">Пробное занятие</a></div>
       </div>
@@ -82,7 +90,7 @@
               </div>
               <div class="card-container">
                 <h2>Акустическая гитара</h2>
-                <div class="more red-button"><a href="">Подробнее</a></div>
+                <div class="more"><a href="">Подробнее</a></div>
               </div>
             </div>
 
@@ -409,8 +417,16 @@
       <address>г. Москва, Потаповский пер. 3с1</address>
       <ul class="icon-container">
         <!-- <li><a class="tiktok" href=""></a></li> -->
-        <li><a class="whatsapp" href="https://wa.me/79258004683" target="_blank"></a></li>
-        <li><a class="telegram" href="https://t.me/sandlerrockschool" target="_blank"></a></li>
+        <li>
+          <a class="whatsapp" href="https://wa.me/79258004683" target="_blank">
+            <img src="./assets/icons/whatsapp.png" alt="">
+          </a>
+        </li>
+        <li>
+          <a class="telegram" href="https://t.me/sandlerrockschool" target="_blank">
+            <img src="./assets/icons/telegram.png" alt="">
+          </a>
+        </li>
       </ul>
       <button class="black-button"><a href="/#take-a-lesson">Обратный звонок</a></button>
     </div>
@@ -431,7 +447,7 @@
         <div class="logo-container">
           <a href="/"><img src="./assets/logo/full-logo-white.svg" alt=""></a>
         </div>
-  
+
         <nav class="footer__menu">
           <ul class="footer__list">
             <li class="footer__item"><a href="">О нас</a></li>
@@ -441,24 +457,32 @@
             <li class="footer__item"><a href="">Контакты</a></li>
           </ul>
         </nav>
-  
+
         <div class="footer__icons-container">
           <ul class="icon-container">
-            <li><a class="whatsapp white-border" href="https://wa.me/79258004683" target="_blank"></a></li>
-            <li><a class="telegram white-border" href="https://t.me/sandlerrockschool" target="_blank"></a></li>
+            <li>
+              <a class="whatsapp" href="https://wa.me/79258004683" target="_blank">
+                <img src="./assets/icons/whatsapp.png" alt="">
+              </a>
+            </li>
+            <li>
+              <a class="telegram" href="https://t.me/sandlerrockschool" target="_blank">
+                <img src="./assets/icons/telegram.png" alt="">
+              </a>
+            </li>
           </ul>
           <div class="black-button"><a href="/#take-a-lesson">Обратный звонок</a></div>
         </div>
-  
+
         <p>Фонд поддержки одаренных детей и молодежи Игоря Сандлера
-          <br>
+          <!-- <br> -->
           ИНН 7719290541; КПП771901001; ОГРН 1137799010030
-          <br>
+          <!-- <br> -->
           Юридический адрес: 105203, г. Москва, ул. Первомайская,
-          <br>
+          <!-- <br> -->
           д. 109/2, кв. 17
         </p>
-  
+
         <div class="footer__contacts">
           <div class="number"><a href="tel:+74997558600">8 (499) 755 86 00</a></div>
           <address>г. Москва, Потаповский пер. 3с1</address>
